update remote control

--- a/ble/05-遥控器开发.md
+++ b/ble/05-遥控器开发.md
@@ -34,9 +34,11 @@ int mible_fastpair_update(mible_addr_t address, uint16_t product_id, uint16_t ob
 
 ### 串口开发
 
-以使用1.0开发方式（外置MCU，使用串口与模组通信）为例，当米家模组收到某个新的遥控器的配对广播时，外置MCU通过串口get_down查询消息，格式如下：
+以使用1.0开发方式（外置MCU，使用串口与模组通信）为例。
 
-ble_fastpair <MAC> <object ID> <product ID> <RSSI>
+当米家模组收到某个新的遥控器的配对广播时，外置MCU通过串口get_down查询消息格式如下：
+
+ble_fastpair [MAC] [object ID] [product ID] [RSSI]
 
 示例：down ble_fastpair 11:22:33:44:55:66 4097 69 -74
 
@@ -44,29 +46,29 @@ ble_fastpair <MAC> <object ID> <product ID> <RSSI>
 
 外置MCU根据需求判断是否要与该遥控器配对，如果确认要进行配对则发送命令，格式如下：
 
-ble_fastpair set <MAC> <object ID> <product ID> <yes/no>
+ble_fastpair set [MAC] [object ID] [product ID] [yes/no]
 
 示例：ble_fastpair set 11:22:33:44:55:66 4097 69 1
 
-其中<yes/no>字段中，0表示no，非零值表示yes（如果选择不配对，也可以选择忽略消息，不发送命令）。
+其中[yes/no]字段中，0表示no，非零值表示yes（如果选择不配对，也可以选择忽略消息，不发送命令）。
 
 米家模组收到确认配对命令后即执行相应操作，并通过串口返回执行结果，格式如下：
 
-ble_fastpair_rsp <MAC> <status>
+ble_fastpair_rsp [MAC] [status]
 
 示例：down ble_fastpair_rsp 11:22:33:44:55:66 succ
 
-其中<status>表示执行结果，"succ"表示成功，"timeout"表示超时未完成，"fail"表示未知错误。
+其中[status]表示执行结果，"succ"表示成功，"timeout"表示超时未完成，"fail"表示未知错误。
 
 此外，如果发送mibeacon的遥控器已经与米家模组配对完成，则米家模组直接发送已完成消息，格式如下：
 
-ble_fastpair_rsp <MAC> done
+ble_fastpair_rsp [MAC] done
 
 示例：down ble_fastpair_rsp 11:22:33:44:55:66 done
 
 配对完成后，可通过周期发送get_down命令获取遥控器发送数据，格式如下：
 
-down ble_event 11:22:33:44:55:66 4100,a2bcd5
+down ble_event 11:22:33:44:55:66 4097,a2bcd5
 
 ## Realtek 8762示例代码
 
