--- a/ble/05-遥控器开发.md
+++ b/ble/05-遥控器开发.md
@@ -80,7 +80,7 @@ down ble_event 11:22:33:44:55:66 4097,a2bcd5
 	// 发送快速配对广播包，修改宏ADV_FAST_PAIR_TIME和ADV_INTERVAL_TIME可定义快速配对广播时长与间隔
 	ble_fastpair_event();
 
-	// 发送加密按键obj，修改宏OBJ_ADV_TIMEOUT_MS和OBJ_ADV_INTERVAL_MS可定义按键obj广播时长与间隔
+	// 发送加密按键obj
 	mibeacon_obj_enque_oneshot();
 
 ## ESP32示例代码
