update ble remote control.md

--- a/ble/05-遥控器开发.md
+++ b/ble/05-遥控器开发.md
@@ -12,7 +12,7 @@
 
 按住combo键触发配对时，需要在广播报文里声明遥控器的身份信息，作为接收端是否配对的验证依据；
 
-调用ble_fastpair_event函数完成配对，遥控器配对状态会最多持续5秒钟；
+调用ble_fastpair_event函数发起配对，遥控器配对状态会最多持续5秒钟；
 
 不同类型设备上的遥控器因按键设置不同，可灵活按如下处理：
 
@@ -30,12 +30,13 @@
 
 操作类型：理论上支持0x00起至0xFF，除标准设定值外，厂商可根据使用情况进行扩展；扩展部分请先和对应的米家产品经理沟通；
 
-| Key type	| 对应操作 		|
-| 0x00 		| 按键单击按下 	|
-| 0x01 		| 按键双击     	|
-| 0x02 		| 按键长按 		|
-| 0x03 		| 旋钮旋转 		|
-| 0x04 		| 单击按键释放	|
+|    Key type     |                        Description                        |
+| :-------------: | :-------------------------------------------------------: |
+|      0x00       |                        按键单击按下                       |
+|      0x01       |                          按键双击                         |
+|      0x02       |                          按键长按                         |
+|      0x03       |                          旋钮旋转                         |
+|      0x04       |                        单击按键释放                       |
 
 键值：理论上支持0x0000起至0xFFFF，除标准设定值外，厂商可根据使用情况进行扩展；扩展部分请先和对应的米家产品经理沟通；
 
